@@ -1168,3 +1168,11 @@ generated by autogen.sh.
 
 (303) Moved GLUT_INIT_STATE to <GL/freeglut_ext.h>, it is not part of the
 original GLUT.
+
+**************************************************************************
+* Changes on August 05, 2006.
+**************************************************************************
+
+(304) Updated build requirements for SuSE 10.1.
+
+(305) Check fgets for return value to avoid warnings.
